<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="input_chinese">Type in Chinese</string>
    <string name="hint_input_chinese">Please input Chinese</string>
    <string name="input_english">Type in English</string>
    <string name="hint_input_english">Please input English</string>
    <string name="explain">Words to explain.</string>
    <string name="hint_explain">Please enter the words to explain.</string>
    <string name="finish">finish</string>
    <string name="more">more</string>
    <string name="word_explain">Word explain:</string>

    <string name="enter"> Click to enter</string>
    <string name="website">official website</string>
    <string name="sina">sian</string>
    <string name="email">nutstudio2014@163.com</string>
    <string name="ownership">This application (English) nuts ownership and all the nuts to the studio!!</string>
	<string name="highest_record">highest record</string>
    <string name="start_game">start game</string>
    <string name="your_score">your score </string>
    <string name="lean">lean</string>
    <string name="game">game</string>
    <string name="search">search</string>
	<string name="hint">putin~~~</string>
    <string name="welcome">welcome ！</string>
    <string name="app_name">nutenglish</string>
	<string name="share_text">#nutenglish#I learned words</string>
	<string name="share_text2">#nutenglish#Allows you to quickly master the professional English vocabulary, let you experience the fun of learning through the game!Friends come and download it！(๑• . •๑)</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_addword">AddwordActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
