<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:paddingTop="@dimen/topbar_margintop"
    tools:context="com.nutstudio.nutenglish.Activity.AddwordActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/input_chinese"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/et_putin_cn"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_top_shape"
            android:focusable="true"
            android:hint="@string/hint_input_chinese"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="4dp"
            android:paddingEnd="4dp"
            android:singleLine="true"
            android:textColor="@color/material_grey_50"
            android:textColorHint="@color/accent_material_dark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/input_english"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_putin_en"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_top_shape"
            android:focusable="true"
            android:hint="@string/hint_input_english"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:singleLine="true"
            android:textColor="@color/material_grey_50"
            android:textColorHint="@color/accent_material_dark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/explain"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_putin_explain"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_top_shape"
            android:focusable="true"
            android:hint="@string/hint_explain"
            android:gravity="top"
            android:padding="16dp"
            android:textColor="@color/material_grey_50"
            android:textColorHint="@color/accent_material_dark"
            android:textSize="16sp" />
        <Button
            android:layout_margin="16dp"
            android:id="@+id/btn_finish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/finish" />
    </LinearLayout>
</ScrollView>
