<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/bg_color">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/bg_color">
    <Button
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:id="@+id/erweima"
        android:layout_margin="8dp"
        android:background="@drawable/erweima"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/website"
        android:layout_below="@id/erweima"
        android:layout_centerHorizontal="true"
        android:id="@+id/guanwang"
        android:layout_margin="8dp"/>

    <Button
        android:layout_height="56dp"
        android:layout_width="56dp"
        android:layout_margin="16dp"
        android:background="@drawable/nutenglish"/>

    <TextView
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:text="@string/sina"
        android:layout_below="@id/guanwang"
        android:id="@+id/aboutTextView1"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:text="联系邮箱:                              nutstudio2014@163.com"
        android:layout_below="@id/aboutTextView1"
        android:id="@+id/aboutTextView2"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="wrap_content"
        android:text="@string/ownership"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text2"/>

</LinearLayout></ScrollView>

