<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_color"
    android:orientation="vertical">

    <include layout="@layout/topbar" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="@color/bottom_color"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/lin_main"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/im_bottom_lean"
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:src="@drawable/nutenglish" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lean" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_game"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/im_bottom_game"
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:src="@drawable/nutenglish" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_people"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/im_bottom_more"
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:src="@drawable/nutenglish" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
